RESOLVED FIXED306854
REGRESSION(306632@main): [GStreamer] Introduced a new warning in the stats collector
https://bugs.webkit.org/show_bug.cgi?id=306854
Summary REGRESSION(306632@main): [GStreamer] Introduced a new warning in the stats co...
Philippe Normand
Reported 2026-02-03 03:08:02 PST
GStreamerStatsCollector.cpp:293:5: warning: non-void lambda does not return a value in all control paths [-Wreturn-type] 293 | }; | ^ 1 warning generated.
Attachments
Philippe Normand
Comment 1 2026-02-03 03:13:59 PST
EWS
Comment 2 2026-02-04 02:10:43 PST
Committed 306764@main (c1f66212c801): <https://commits.webkit.org/306764@main> Reviewed commits have been landed. Closing PR #57766 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-02-04 02:11:12 PST
Note You need to log in before you can comment on or make changes to this bug.