REGRESSION(306632@main): [GStreamer] Introduced a new warning in the stats collector https://bugs.webkit.org/show_bug.cgi?id=306854

Reviewed by Xabier Rodriguez-Calvar.

Return early from the getDtlsRole closure if the corresponding field is not present in the GStreamer
stats.

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerStatsCollector.cpp:
(WebCore::RTCStatsReport::TransportStats::convert):

Canonical link: https://commits.webkit.org/306764@main